# ecommerce-api

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 55f2d29866e6_add_product_id_to_order_items.py  7de30c37c5ad_initial_migration_with_users_products_.py  9259f0b815a0_add_orders_and_order_items_tables.py
src/: main.py
src/api/: deps.py
src/api/routes/: ai.py  auth.py  cart.py  orders.py  products.py  users.py
src/core/: config.py  security.py
src/db/: base.py  init_db.py  session.py
src/models/: cart.py  enums.py  order.py  product.py  user.py
src/schemas/: ai.py  cart.py  order.py  product.py  user.py
src/services/: ai_service.py  cart_service.py  order_service.py
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_cart_routes.py  test_order_routes.py  test_product_routes.py
tests/unit/: test_security.py
tests/unit/test_services/: test_cart_service.py  test_order_service.py
